# syncbox

./: .gitignore  LICENSE  README.md
enclosure/: LICENSE  syncbox_enclosure.FCStd  syncbox_enclosure_base.stl  syncbox_enclosure_top.stl
firmware/: Makefile  f303re_pins.ods  trace.py
firmware/include/: cmsis_compiler.h  cmsis_gcc.h  cmsis_version.h  display.h  flash.h  loader.ld  midi.h  midi_event.h  midi_uart.h  midi_usb.h  openocd-nucleo.cfg  openocd-stlinkv2.cfg  settings.h  stm32f303xe.h  stm32f303xe_ram.ld  stm32f3xx.h  system_stm32f3xx.h  timer.h  usb.h
firmware/src/: display.c  flash.c  loader.s  main.c  midi_event.c  midi_uart.c  midi_usb.c  options.c  settings.c  system.c  timer.c  vtable.c
pcb/: fp-lib-table  sym-lib-table  syncbox.kicad_pcb  syncbox.kicad_pro  syncbox.kicad_sch
pcb/syncbox.pretty/: 35RAPC2AHN2.kicad_mod  5211450-1.kicad_mod  BOX.kicad_mod  BarrelJack_Horizontal.kicad_mod  CP_Radial_D4.0mm_P2.00mm.kicad_mod  C_0805_2012Metric_Pad1.15x1.40mm_HandSolder.kicad_mod  D_0603_1608Metric_Pad1.05x0.95mm_HandSolder.kicad_mod  D_0805_2012Metric_Pad1.15x1.40mm_HandSolder.kicad_mod  D_A-405_P10.16mm_Horizontal.kicad_mod  ECS-TXO-2520.kicad_mod  LED_D3.0mm_Clear.kicad_mod  LQFP-64_10x10mm_P0.5mm.kicad_mod  L_0603_1608Metric_Pad1.05x0.95mm_HandSolder.kicad_mod  MUSBD111M0.kicad_mod  MountingHole_3.2mm_M3_Pad.kicad_mod  Oscillator_SMD_SeikoEpson_SG210-4Pin_2.5x2.0mm_HandSoldering.kicad_mod  PinHeader_1x06_P2.54mm_Vertical.kicad_mod  SOT-23-5.kicad_mod  (+8 more)
syncbox-edit/: README.md  example_configuration.json  pyproject.toml  syncbox-edit.1  syncbox.py
