[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[project]
name = "syncbox-edit"
version = "1.0.0"
description = "Syncbox SysEx setting editor"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["midi", "din", "syncbox", "SysEx"]
authors = [
    {email = "ndf-zz@6-v.org", name = "Nathan Fraser"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "mido",
    "pyserial",
]

[project.urls]
homepage = "https://github.com/ndf-zz/syncbox"

[project.scripts]
syncbox-edit = "syncbox:main"
